objects/X12748__c.object
<CustomObject>
    <fields>
        <fullName>Destination__c</fullName>
        <label>Destination</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Destination_c__c</fullName>
        <label>Destination__c</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Insights__c</fullName>
        <label>Insights</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Outlook__c</fullName>
        <label>Opportunity Outlook</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Limited</fullName>
                </value>
                <value>
                    <fullName>Some</fullName>
                </value>
                <value>
                    <fullName>No Direct Servcie</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>POS_Country__c</fullName>
        <label>POS Country</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>origin__c</fullName>
        <label>origin</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>12748</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Calendar Week</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>12748s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>